LittleDuck/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID PUNTOYCOMA prog1
Rule 2     prog1 -> vars bloque
Rule 3     prog1 -> bloque
Rule 4     vars -> VAR var1
Rule 5     var1 -> var2 DOSPUNTOS tipo PUNTOYCOMA var3
Rule 6     var2 -> ID var21
Rule 7     var21 -> COMA var2
Rule 8     var21 -> vacio
Rule 9     var3 -> var1
Rule 10    var3 -> vacio
Rule 11    tipo -> INT
Rule 12    tipo -> FLOAT
Rule 13    bloque -> LLAVEI bloque1 LLAVED
Rule 14    bloque1 -> estatuto bloque1
Rule 15    bloque1 -> vacio
Rule 16    estatuto -> asignacion
Rule 17    estatuto -> condicion
Rule 18    estatuto -> escritura
Rule 19    asignacion -> ID IGUAL expresion PUNTOYCOMA
Rule 20    escritura -> PRINT PARENTESISI escr1 PARENTESISD PUNTOYCOMA
Rule 21    escr1 -> expresion escr1
Rule 22    escr1 -> CTESTRING escr2
Rule 23    escr2 -> COMA escr1
Rule 24    escr2 -> vacio
Rule 25    expresion -> exp expres1
Rule 26    expres1 -> MAYOR exp
Rule 27    expres1 -> MENOR exp
Rule 28    expres1 -> DIFERENTE exp
Rule 29    expres1 -> vacio
Rule 30    exp -> termino exp1
Rule 31    exp1 -> SUMA exp
Rule 32    exp1 -> RESTA exp
Rule 33    exp1 -> vacio
Rule 34    condicion -> IF PARENTESISI expresion PARENTESISD bloque cond1 PUNTOYCOMA
Rule 35    cond1 -> ELSE bloque
Rule 36    cond1 -> vacio
Rule 37    termino -> factor term1
Rule 38    term1 -> MULTIP termino
Rule 39    term1 -> DIVISION termino
Rule 40    term1 -> vacio
Rule 41    factor -> PARENTESISI expresion PARENTESISD
Rule 42    factor -> SUMA varcte
Rule 43    factor -> RESTA varcte
Rule 44    factor -> varcte
Rule 45    varcte -> ID
Rule 46    varcte -> CTEI
Rule 47    varcte -> CTEF
Rule 48    vacio -> <empty>

Terminals, with rules where they appear

COMA                 : 7 23
CTEF                 : 47
CTEI                 : 46
CTESTRING            : 22
DIFERENTE            : 28
DIVISION             : 39
DOSPUNTOS            : 5
ELSE                 : 35
FLOAT                : 12
ID                   : 1 6 19 45
IF                   : 34
IGUAL                : 19
INT                  : 11
LLAVED               : 13
LLAVEI               : 13
MAYOR                : 26
MENOR                : 27
MULTIP               : 38
PARENTESISD          : 20 34 41
PARENTESISI          : 20 34 41
PRINT                : 20
PROGRAM              : 1
PUNTOYCOMA           : 1 5 19 20 34
RESTA                : 32 43
SUMA                 : 31 42
VAR                  : 4
error                : 

Nonterminals, with rules where they appear

asignacion           : 16
bloque               : 2 3 34 35
bloque1              : 13 14
cond1                : 34
condicion            : 17
escr1                : 20 21 23
escr2                : 22
escritura            : 18
estatuto             : 14
exp                  : 25 26 27 28 31 32
exp1                 : 30
expres1              : 25
expresion            : 19 21 34 41
factor               : 37
prog1                : 1
program              : 0
term1                : 37
termino              : 30 38 39
tipo                 : 5
vacio                : 8 10 15 24 29 33 36 40
var1                 : 4 9
var2                 : 5 7
var21                : 6
var3                 : 5
varcte               : 42 43 44
vars                 : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID PUNTOYCOMA prog1

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . ID PUNTOYCOMA prog1

    ID              shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> PROGRAM ID . PUNTOYCOMA prog1

    PUNTOYCOMA      shift and go to state 4


state 4

    (1) program -> PROGRAM ID PUNTOYCOMA . prog1
    (2) prog1 -> . vars bloque
    (3) prog1 -> . bloque
    (4) vars -> . VAR var1
    (13) bloque -> . LLAVEI bloque1 LLAVED

    VAR             shift and go to state 7
    LLAVEI          shift and go to state 8

    prog1                          shift and go to state 5
    bloque                         shift and go to state 9
    vars                           shift and go to state 6

state 5

    (1) program -> PROGRAM ID PUNTOYCOMA prog1 .

    $end            reduce using rule 1 (program -> PROGRAM ID PUNTOYCOMA prog1 .)


state 6

    (2) prog1 -> vars . bloque
    (13) bloque -> . LLAVEI bloque1 LLAVED

    LLAVEI          shift and go to state 8

    bloque                         shift and go to state 10

state 7

    (4) vars -> VAR . var1
    (5) var1 -> . var2 DOSPUNTOS tipo PUNTOYCOMA var3
    (6) var2 -> . ID var21

    ID              shift and go to state 13

    var1                           shift and go to state 11
    var2                           shift and go to state 12

state 8

    (13) bloque -> LLAVEI . bloque1 LLAVED
    (14) bloque1 -> . estatuto bloque1
    (15) bloque1 -> . vacio
    (16) estatuto -> . asignacion
    (17) estatuto -> . condicion
    (18) estatuto -> . escritura
    (48) vacio -> .
    (19) asignacion -> . ID IGUAL expresion PUNTOYCOMA
    (34) condicion -> . IF PARENTESISI expresion PARENTESISD bloque cond1 PUNTOYCOMA
    (20) escritura -> . PRINT PARENTESISI escr1 PARENTESISD PUNTOYCOMA

    LLAVED          reduce using rule 48 (vacio -> .)
    ID              shift and go to state 21
    IF              shift and go to state 19
    PRINT           shift and go to state 20

    bloque1                        shift and go to state 14
    asignacion                     shift and go to state 15
    estatuto                       shift and go to state 16
    vacio                          shift and go to state 17
    condicion                      shift and go to state 18
    escritura                      shift and go to state 22

state 9

    (3) prog1 -> bloque .

    $end            reduce using rule 3 (prog1 -> bloque .)


state 10

    (2) prog1 -> vars bloque .

    $end            reduce using rule 2 (prog1 -> vars bloque .)


state 11

    (4) vars -> VAR var1 .

    LLAVEI          reduce using rule 4 (vars -> VAR var1 .)


state 12

    (5) var1 -> var2 . DOSPUNTOS tipo PUNTOYCOMA var3

    DOSPUNTOS       shift and go to state 23


state 13

    (6) var2 -> ID . var21
    (7) var21 -> . COMA var2
    (8) var21 -> . vacio
    (48) vacio -> .

    COMA            shift and go to state 24
    DOSPUNTOS       reduce using rule 48 (vacio -> .)

    vacio                          shift and go to state 25
    var21                          shift and go to state 26

state 14

    (13) bloque -> LLAVEI bloque1 . LLAVED

    LLAVED          shift and go to state 27


state 15

    (16) estatuto -> asignacion .

    ID              reduce using rule 16 (estatuto -> asignacion .)
    IF              reduce using rule 16 (estatuto -> asignacion .)
    PRINT           reduce using rule 16 (estatuto -> asignacion .)
    LLAVED          reduce using rule 16 (estatuto -> asignacion .)


state 16

    (14) bloque1 -> estatuto . bloque1
    (14) bloque1 -> . estatuto bloque1
    (15) bloque1 -> . vacio
    (16) estatuto -> . asignacion
    (17) estatuto -> . condicion
    (18) estatuto -> . escritura
    (48) vacio -> .
    (19) asignacion -> . ID IGUAL expresion PUNTOYCOMA
    (34) condicion -> . IF PARENTESISI expresion PARENTESISD bloque cond1 PUNTOYCOMA
    (20) escritura -> . PRINT PARENTESISI escr1 PARENTESISD PUNTOYCOMA

    LLAVED          reduce using rule 48 (vacio -> .)
    ID              shift and go to state 21
    IF              shift and go to state 19
    PRINT           shift and go to state 20

    bloque1                        shift and go to state 28
    asignacion                     shift and go to state 15
    estatuto                       shift and go to state 16
    vacio                          shift and go to state 17
    condicion                      shift and go to state 18
    escritura                      shift and go to state 22

state 17

    (15) bloque1 -> vacio .

    LLAVED          reduce using rule 15 (bloque1 -> vacio .)


state 18

    (17) estatuto -> condicion .

    ID              reduce using rule 17 (estatuto -> condicion .)
    IF              reduce using rule 17 (estatuto -> condicion .)
    PRINT           reduce using rule 17 (estatuto -> condicion .)
    LLAVED          reduce using rule 17 (estatuto -> condicion .)


state 19

    (34) condicion -> IF . PARENTESISI expresion PARENTESISD bloque cond1 PUNTOYCOMA

    PARENTESISI     shift and go to state 29


state 20

    (20) escritura -> PRINT . PARENTESISI escr1 PARENTESISD PUNTOYCOMA

    PARENTESISI     shift and go to state 30


state 21

    (19) asignacion -> ID . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 31


state 22

    (18) estatuto -> escritura .

    ID              reduce using rule 18 (estatuto -> escritura .)
    IF              reduce using rule 18 (estatuto -> escritura .)
    PRINT           reduce using rule 18 (estatuto -> escritura .)
    LLAVED          reduce using rule 18 (estatuto -> escritura .)


state 23

    (5) var1 -> var2 DOSPUNTOS . tipo PUNTOYCOMA var3
    (11) tipo -> . INT
    (12) tipo -> . FLOAT

    INT             shift and go to state 33
    FLOAT           shift and go to state 34

    tipo                           shift and go to state 32

state 24

    (7) var21 -> COMA . var2
    (6) var2 -> . ID var21

    ID              shift and go to state 13

    var2                           shift and go to state 35

state 25

    (8) var21 -> vacio .

    DOSPUNTOS       reduce using rule 8 (var21 -> vacio .)


state 26

    (6) var2 -> ID var21 .

    DOSPUNTOS       reduce using rule 6 (var2 -> ID var21 .)


state 27

    (13) bloque -> LLAVEI bloque1 LLAVED .

    $end            reduce using rule 13 (bloque -> LLAVEI bloque1 LLAVED .)
    PUNTOYCOMA      reduce using rule 13 (bloque -> LLAVEI bloque1 LLAVED .)
    ELSE            reduce using rule 13 (bloque -> LLAVEI bloque1 LLAVED .)


state 28

    (14) bloque1 -> estatuto bloque1 .

    LLAVED          reduce using rule 14 (bloque1 -> estatuto bloque1 .)


state 29

    (34) condicion -> IF PARENTESISI . expresion PARENTESISD bloque cond1 PUNTOYCOMA
    (25) expresion -> . exp expres1
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    expresion                      shift and go to state 36
    varcte                         shift and go to state 37
    termino                        shift and go to state 40
    exp                            shift and go to state 41
    factor                         shift and go to state 42

state 30

    (20) escritura -> PRINT PARENTESISI . escr1 PARENTESISD PUNTOYCOMA
    (21) escr1 -> . expresion escr1
    (22) escr1 -> . CTESTRING escr2
    (25) expresion -> . exp expres1
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    CTESTRING       shift and go to state 48
    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    expresion                      shift and go to state 47
    varcte                         shift and go to state 37
    escr1                          shift and go to state 49
    termino                        shift and go to state 40
    exp                            shift and go to state 41
    factor                         shift and go to state 42

state 31

    (19) asignacion -> ID IGUAL . expresion PUNTOYCOMA
    (25) expresion -> . exp expres1
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    expresion                      shift and go to state 50
    varcte                         shift and go to state 37
    termino                        shift and go to state 40
    exp                            shift and go to state 41
    factor                         shift and go to state 42

state 32

    (5) var1 -> var2 DOSPUNTOS tipo . PUNTOYCOMA var3

    PUNTOYCOMA      shift and go to state 51


state 33

    (11) tipo -> INT .

    PUNTOYCOMA      reduce using rule 11 (tipo -> INT .)


state 34

    (12) tipo -> FLOAT .

    PUNTOYCOMA      reduce using rule 12 (tipo -> FLOAT .)


state 35

    (7) var21 -> COMA var2 .

    DOSPUNTOS       reduce using rule 7 (var21 -> COMA var2 .)


state 36

    (34) condicion -> IF PARENTESISI expresion . PARENTESISD bloque cond1 PUNTOYCOMA

    PARENTESISD     shift and go to state 52


state 37

    (44) factor -> varcte .

    MULTIP          reduce using rule 44 (factor -> varcte .)
    DIVISION        reduce using rule 44 (factor -> varcte .)
    SUMA            reduce using rule 44 (factor -> varcte .)
    RESTA           reduce using rule 44 (factor -> varcte .)
    MAYOR           reduce using rule 44 (factor -> varcte .)
    MENOR           reduce using rule 44 (factor -> varcte .)
    DIFERENTE       reduce using rule 44 (factor -> varcte .)
    PARENTESISD     reduce using rule 44 (factor -> varcte .)
    CTESTRING       reduce using rule 44 (factor -> varcte .)
    PARENTESISI     reduce using rule 44 (factor -> varcte .)
    ID              reduce using rule 44 (factor -> varcte .)
    CTEI            reduce using rule 44 (factor -> varcte .)
    CTEF            reduce using rule 44 (factor -> varcte .)
    PUNTOYCOMA      reduce using rule 44 (factor -> varcte .)


state 38

    (41) factor -> PARENTESISI . expresion PARENTESISD
    (25) expresion -> . exp expres1
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    expresion                      shift and go to state 53
    varcte                         shift and go to state 37
    termino                        shift and go to state 40
    exp                            shift and go to state 41
    factor                         shift and go to state 42

state 39

    (45) varcte -> ID .

    MULTIP          reduce using rule 45 (varcte -> ID .)
    DIVISION        reduce using rule 45 (varcte -> ID .)
    SUMA            reduce using rule 45 (varcte -> ID .)
    RESTA           reduce using rule 45 (varcte -> ID .)
    MAYOR           reduce using rule 45 (varcte -> ID .)
    MENOR           reduce using rule 45 (varcte -> ID .)
    DIFERENTE       reduce using rule 45 (varcte -> ID .)
    PUNTOYCOMA      reduce using rule 45 (varcte -> ID .)
    PARENTESISD     reduce using rule 45 (varcte -> ID .)
    CTESTRING       reduce using rule 45 (varcte -> ID .)
    PARENTESISI     reduce using rule 45 (varcte -> ID .)
    ID              reduce using rule 45 (varcte -> ID .)
    CTEI            reduce using rule 45 (varcte -> ID .)
    CTEF            reduce using rule 45 (varcte -> ID .)


state 40

    (30) exp -> termino . exp1
    (31) exp1 -> . SUMA exp
    (32) exp1 -> . RESTA exp
    (33) exp1 -> . vacio
    (48) vacio -> .

  ! shift/reduce conflict for SUMA resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
    SUMA            shift and go to state 57
    RESTA           shift and go to state 56
    MAYOR           reduce using rule 48 (vacio -> .)
    MENOR           reduce using rule 48 (vacio -> .)
    DIFERENTE       reduce using rule 48 (vacio -> .)
    PARENTESISD     reduce using rule 48 (vacio -> .)
    CTESTRING       reduce using rule 48 (vacio -> .)
    PARENTESISI     reduce using rule 48 (vacio -> .)
    ID              reduce using rule 48 (vacio -> .)
    CTEI            reduce using rule 48 (vacio -> .)
    CTEF            reduce using rule 48 (vacio -> .)
    PUNTOYCOMA      reduce using rule 48 (vacio -> .)

  ! SUMA            [ reduce using rule 48 (vacio -> .) ]
  ! RESTA           [ reduce using rule 48 (vacio -> .) ]

    exp1                           shift and go to state 54
    vacio                          shift and go to state 55

state 41

    (25) expresion -> exp . expres1
    (26) expres1 -> . MAYOR exp
    (27) expres1 -> . MENOR exp
    (28) expres1 -> . DIFERENTE exp
    (29) expres1 -> . vacio
    (48) vacio -> .

    MAYOR           shift and go to state 62
    MENOR           shift and go to state 61
    DIFERENTE       shift and go to state 60
    PARENTESISD     reduce using rule 48 (vacio -> .)
    CTESTRING       reduce using rule 48 (vacio -> .)
    PARENTESISI     reduce using rule 48 (vacio -> .)
    SUMA            reduce using rule 48 (vacio -> .)
    RESTA           reduce using rule 48 (vacio -> .)
    ID              reduce using rule 48 (vacio -> .)
    CTEI            reduce using rule 48 (vacio -> .)
    CTEF            reduce using rule 48 (vacio -> .)
    PUNTOYCOMA      reduce using rule 48 (vacio -> .)

    expres1                        shift and go to state 58
    vacio                          shift and go to state 59

state 42

    (37) termino -> factor . term1
    (38) term1 -> . MULTIP termino
    (39) term1 -> . DIVISION termino
    (40) term1 -> . vacio
    (48) vacio -> .

    MULTIP          shift and go to state 64
    DIVISION        shift and go to state 63
    SUMA            reduce using rule 48 (vacio -> .)
    RESTA           reduce using rule 48 (vacio -> .)
    MAYOR           reduce using rule 48 (vacio -> .)
    MENOR           reduce using rule 48 (vacio -> .)
    DIFERENTE       reduce using rule 48 (vacio -> .)
    PARENTESISD     reduce using rule 48 (vacio -> .)
    CTESTRING       reduce using rule 48 (vacio -> .)
    PARENTESISI     reduce using rule 48 (vacio -> .)
    ID              reduce using rule 48 (vacio -> .)
    CTEI            reduce using rule 48 (vacio -> .)
    CTEF            reduce using rule 48 (vacio -> .)
    PUNTOYCOMA      reduce using rule 48 (vacio -> .)

    vacio                          shift and go to state 66
    term1                          shift and go to state 65

state 43

    (47) varcte -> CTEF .

    MULTIP          reduce using rule 47 (varcte -> CTEF .)
    DIVISION        reduce using rule 47 (varcte -> CTEF .)
    SUMA            reduce using rule 47 (varcte -> CTEF .)
    RESTA           reduce using rule 47 (varcte -> CTEF .)
    MAYOR           reduce using rule 47 (varcte -> CTEF .)
    MENOR           reduce using rule 47 (varcte -> CTEF .)
    DIFERENTE       reduce using rule 47 (varcte -> CTEF .)
    PUNTOYCOMA      reduce using rule 47 (varcte -> CTEF .)
    PARENTESISD     reduce using rule 47 (varcte -> CTEF .)
    CTESTRING       reduce using rule 47 (varcte -> CTEF .)
    PARENTESISI     reduce using rule 47 (varcte -> CTEF .)
    ID              reduce using rule 47 (varcte -> CTEF .)
    CTEI            reduce using rule 47 (varcte -> CTEF .)
    CTEF            reduce using rule 47 (varcte -> CTEF .)


state 44

    (46) varcte -> CTEI .

    MULTIP          reduce using rule 46 (varcte -> CTEI .)
    DIVISION        reduce using rule 46 (varcte -> CTEI .)
    SUMA            reduce using rule 46 (varcte -> CTEI .)
    RESTA           reduce using rule 46 (varcte -> CTEI .)
    MAYOR           reduce using rule 46 (varcte -> CTEI .)
    MENOR           reduce using rule 46 (varcte -> CTEI .)
    DIFERENTE       reduce using rule 46 (varcte -> CTEI .)
    PUNTOYCOMA      reduce using rule 46 (varcte -> CTEI .)
    PARENTESISD     reduce using rule 46 (varcte -> CTEI .)
    CTESTRING       reduce using rule 46 (varcte -> CTEI .)
    PARENTESISI     reduce using rule 46 (varcte -> CTEI .)
    ID              reduce using rule 46 (varcte -> CTEI .)
    CTEI            reduce using rule 46 (varcte -> CTEI .)
    CTEF            reduce using rule 46 (varcte -> CTEI .)


state 45

    (43) factor -> RESTA . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    varcte                         shift and go to state 67

state 46

    (42) factor -> SUMA . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    varcte                         shift and go to state 68

state 47

    (21) escr1 -> expresion . escr1
    (21) escr1 -> . expresion escr1
    (22) escr1 -> . CTESTRING escr2
    (25) expresion -> . exp expres1
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    CTESTRING       shift and go to state 48
    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    expresion                      shift and go to state 47
    varcte                         shift and go to state 37
    escr1                          shift and go to state 69
    termino                        shift and go to state 40
    exp                            shift and go to state 41
    factor                         shift and go to state 42

state 48

    (22) escr1 -> CTESTRING . escr2
    (23) escr2 -> . COMA escr1
    (24) escr2 -> . vacio
    (48) vacio -> .

    COMA            shift and go to state 70
    PARENTESISD     reduce using rule 48 (vacio -> .)

    escr2                          shift and go to state 71
    vacio                          shift and go to state 72

state 49

    (20) escritura -> PRINT PARENTESISI escr1 . PARENTESISD PUNTOYCOMA

    PARENTESISD     shift and go to state 73


state 50

    (19) asignacion -> ID IGUAL expresion . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 74


state 51

    (5) var1 -> var2 DOSPUNTOS tipo PUNTOYCOMA . var3
    (9) var3 -> . var1
    (10) var3 -> . vacio
    (5) var1 -> . var2 DOSPUNTOS tipo PUNTOYCOMA var3
    (48) vacio -> .
    (6) var2 -> . ID var21

    LLAVEI          reduce using rule 48 (vacio -> .)
    ID              shift and go to state 13

    var1                           shift and go to state 75
    var3                           shift and go to state 76
    var2                           shift and go to state 12
    vacio                          shift and go to state 77

state 52

    (34) condicion -> IF PARENTESISI expresion PARENTESISD . bloque cond1 PUNTOYCOMA
    (13) bloque -> . LLAVEI bloque1 LLAVED

    LLAVEI          shift and go to state 8

    bloque                         shift and go to state 78

state 53

    (41) factor -> PARENTESISI expresion . PARENTESISD

    PARENTESISD     shift and go to state 79


state 54

    (30) exp -> termino exp1 .

    MAYOR           reduce using rule 30 (exp -> termino exp1 .)
    MENOR           reduce using rule 30 (exp -> termino exp1 .)
    DIFERENTE       reduce using rule 30 (exp -> termino exp1 .)
    PARENTESISD     reduce using rule 30 (exp -> termino exp1 .)
    CTESTRING       reduce using rule 30 (exp -> termino exp1 .)
    PARENTESISI     reduce using rule 30 (exp -> termino exp1 .)
    SUMA            reduce using rule 30 (exp -> termino exp1 .)
    RESTA           reduce using rule 30 (exp -> termino exp1 .)
    ID              reduce using rule 30 (exp -> termino exp1 .)
    CTEI            reduce using rule 30 (exp -> termino exp1 .)
    CTEF            reduce using rule 30 (exp -> termino exp1 .)
    PUNTOYCOMA      reduce using rule 30 (exp -> termino exp1 .)


state 55

    (33) exp1 -> vacio .

    MAYOR           reduce using rule 33 (exp1 -> vacio .)
    MENOR           reduce using rule 33 (exp1 -> vacio .)
    DIFERENTE       reduce using rule 33 (exp1 -> vacio .)
    PARENTESISD     reduce using rule 33 (exp1 -> vacio .)
    CTESTRING       reduce using rule 33 (exp1 -> vacio .)
    PARENTESISI     reduce using rule 33 (exp1 -> vacio .)
    SUMA            reduce using rule 33 (exp1 -> vacio .)
    RESTA           reduce using rule 33 (exp1 -> vacio .)
    ID              reduce using rule 33 (exp1 -> vacio .)
    CTEI            reduce using rule 33 (exp1 -> vacio .)
    CTEF            reduce using rule 33 (exp1 -> vacio .)
    PUNTOYCOMA      reduce using rule 33 (exp1 -> vacio .)


state 56

    (32) exp1 -> RESTA . exp
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    varcte                         shift and go to state 37
    termino                        shift and go to state 40
    exp                            shift and go to state 80
    factor                         shift and go to state 42

state 57

    (31) exp1 -> SUMA . exp
    (30) exp -> . termino exp1
    (37) termino -> . factor term1
    (41) factor -> . PARENTESISI expresion PARENTESISD
    (42) factor -> . SUMA varcte
    (43) factor -> . RESTA varcte
    (44) factor -> . varcte
    (45) varcte -> . ID
    (46) varcte -> . CTEI
    (47) varcte -> . CTEF

    PARENTESISI     shift and go to state 38
    SUMA            shift and go to state 46
    RESTA           shift and go to state 45
    ID              shift and go to state 39
    CTEI            shift and go to state 44
    CTEF            shift and go to state 43

    varcte                         shift and go to state 37
    termino                        shift and go to state 40
    exp                            shift and go to state 81
    factor                         shift and go to state 42

state 58

    (25) expresion -> exp expres1 .
